crates/riv-tools/src/filesystem/snapshots/riv_tools__filesystem__read_file__tests__read_file_with_max_lines.snap
---
source: crates/riv-tools/src/filesystem/read_file.rs
expression: result
---
line1
line2
line3
line4
line5
line6
line7
line8
line9
line10
